--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,14 @@
 <p>
   <h3>Name:</h3>
   <%= @post.name %>
+
+  <ul>
+  
+    <% @post.tags.each do |t|%>
+        <li><%= t.name%></li>
+    <% end %>
+
+  </ul>
 </p>
 
 
